--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyFirstjs</title>
+    <link rel="stylesheet" href="js/code.js">
+    <script src="js/code.js"></script>
 </head>
 <body>
     <h1>Hola</h1>
@@ -13,28 +15,12 @@
         <li><span class="hello2"></span></li>
         <li><span class="hello3"></span></li>
     </ul>
-    <ul>
-        <li><span class="hello1"></span></li>
-        <li><span class="hello2"></span></li>
-        <li><span class="hello3"></span></li>
-        <li><span class="hello4"></span></li>
-        <li><span class="hello5"></span></li>
-        <li><span class="hello6"></span></li>
-    </ul>
     <div class="principal">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi qui harum consectetur! Sed impedit ipsum provident quibusdam obcaecati, natus hic, deleniti odio quidem dignissimos molestias dolor ad! Sunt, corporis eius!</p>
         <p>Laboriosam ducimus iusto aperiam distinctio temporibus doloribus suscipit, maiores voluptatibus. Vel dolorum dolor blanditiis ipsum tempora optio accusantium alias, architecto cumque reiciendis rem, nulla molestiae voluptatem animi, inventore amet aliquam.</p>
         <p>Eos ipsum minus ipsa maxime illo omnis praesentium accusantium, beatae, nostrum blanditiis id aliquid harum doloribus, amet necessitatibus laudantium! Eos, quisquam dolorem at officia impedit tempore excepturi provident in ipsum.</p>
     </div>
-    <div class="" id="id">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus asperiores neque porro vitae nisi. Tempora enim illum at rem eaque numquam? Animi quod odit possimus voluptatum vitae. Obcaecati, corrupti id.</p>
-        <p>Officia, tempora facere doloremque nostrum tempore delectus hic saepe perspiciatis laborum. Delectus, architecto rerum. Vitae, atque libero. Sint eum, repellat a quam suscipit voluptates exercitationem quo hic maxime iste recusandae?</p>
-        <p>Cum cupiditate id natus culpa, molestiae tempore unde consequatur distinctio quod expedita rem, repellat facilis eveniet aliquid sunt est sapiente impedit! Nemo, totam. Natus nemo itaque consequuntur dolore, ipsam sapiente!</p>
-    </div>
-    <script>
-        alert("Hello my js")
-    </script>
-    
+  
     <p title="presentacion">Este es mi texto</p>
 
     <header>
